<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding = "20dp"
        android:orientation="vertical"
        android:background="@color/blizzardBlue"
        tools:context=".LoginActivity">

        <!--Login-->

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:srcCompat="@drawable/learners" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="  welcome to"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/activityLoginTextTitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize = "25sp"
            android:textAlignment="viewEnd"
            android:text="start learning smarter!  "
            android:textStyle="italic"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="251dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activitySignupTextName"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activitySignupTextNameHint"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityLoginTextLogin"
            android:textSize = "20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activityLoginTextHint"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />
        <!--Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityLoginTextPassword"
            android:textSize = "20sp"
            android:textStyle="bold"
            />

        <EditText
            android:id = "@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activitySignupCreateAccountButton"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activitySignupBackToLoginButton"
            android:textSize="20sp"
            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:outlineSpotShadowColor="@color/reddish"

        />
</FrameLayout>